--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             left: 0;
             width: 45%;
             height: 100vh; /* 화면 높이만큼 설정 */
-            background-image: url(“./simplewebs/profile.jpg”); /* 이미지 주소 수정 */
+            background-image: url(“./simpleweb/profile.jpg”); /* 이미지 주소 수정 */
             background-size: cover;
             background-position: center;
             text-align: left;
@@ -263,9 +263,9 @@
             <!-- 이전 버튼 -->
             <button id="prevBtn" class="slider-button">&#10094;</button>
             <div class="slider">
-                <div class="slide"><img src="./simplewebs/portfolio_1.jpg" alt="Image 1"></div>
-                <div class="slide"><img src=“./simplewebs/portfolio_2.jpg” alt="Image 2"></div>
-                <div class="slide"><img src=“./simplewebs/portfolio_3.jpg” alt="Image 3"></div>
+                <div class="slide"><img src="./simpleweb/portfolio_1.jpg" alt="Image 1"></div>
+                <div class="slide"><img src=“./simpleweb/portfolio_2.jpg” alt="Image 2"></div>
+                <div class="slide"><img src=“./simpleweb/portfolio_3.jpg” alt="Image 3"></div>
             </div>
             <button id="nextBtn" class="slider-button">&#10095;</button>
         </div>
