--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             top: 0;
             left: 0;
             width: 45%;
-            height: 100vh; /* 화면 높이만큼 설정 */
+            height: 100%; /* 화면 높이만큼 설정 */
             background-image: url(“simpleweb/profile.jpg”); /* 이미지 주소 수정 */
             background-size: cover;
             background-position: center;
