--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         .header {
             position: absolute;
-            top: 0%;
-            left: 0%;
+            top: 0;
+            left: 0;
             width: 45%;
             height: 100vh; /* 화면 높이만큼 설정 */
             background-image: url(“simpleweb/profile.jpg”); /* 이미지 주소 수정 */
